--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,8 +25,8 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 #spring.datasource.initialization-mode=always
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=soumyap207@gmail.com
-spring.mail.password=wzyhiqadsjxpvpua
+spring.mail.username=
+spring.mail.password=
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
 spring.mail.properties.mail.smtp.auth=true
